pkl-core/src/test/files/LanguageSnippetTests/input/errors/keywordNotAllowedHere2.pkl
function outer() = 42
res1 = 42